# mauikit-terminal

./: .gitignore  .kde-ci.yml  CMakeLists.txt  Mainpage.dox  MauiKitTerminalConfig.cmake.in  MauiKitTerminalConfig.cmake.in.5  MauiKitTerminalConfig.cmake.in.6  Messages.sh  README.md  metainfo.yaml
docs/: quickstart.md
examples/: ColorSchemesPage.qml  Terminal.qml
po/ar/: mauikitterminal.po
po/ca/: mauikitterminal.po
po/ca@valencia/: mauikitterminal.po
po/cs/: mauikitterminal.po
po/de/: mauikitterminal.po
po/en_GB/: mauikitterminal.po
po/eo/: mauikitterminal.po
po/es/: mauikitterminal.po
po/eu/: mauikitterminal.po
po/fi/: mauikitterminal.po
po/fr/: mauikitterminal.po
po/ga/: mauikitterminal.po
po/gl/: mauikitterminal.po
po/he/: mauikitterminal.po
po/hu/: mauikitterminal.po
po/it/: mauikitterminal.po
po/ja/: mauikitterminal.po
po/ka/: mauikitterminal.po
po/ko/: mauikitterminal.po
po/lt/: mauikitterminal.po
po/lv/: mauikitterminal.po
po/nl/: mauikitterminal.po
po/nn/: mauikitterminal.po
po/pl/: mauikitterminal.po
po/pt/: mauikitterminal.po
po/pt_BR/: mauikitterminal.po
po/ro/: mauikitterminal.po
po/sa/: mauikitterminal.po
po/sk/: mauikitterminal.po
po/sl/: mauikitterminal.po
po/sv/: mauikitterminal.po
po/tr/: mauikitterminal.po
po/ug/: mauikitterminal.po
po/uk/: mauikitterminal.po
po/zh_CN/: mauikitterminal.po
po/zh_TW/: mauikitterminal.po
src/: CMakeLists.txt  resources.qrc
src/code/: colorschemesmodel.cpp  colorschemesmodel.h  customcolorscheme.cpp  customcolorscheme.h  ksession.cpp  ksession.h  moduleinfo.cpp  moduleinfo.h  terminal_plugin.cpp  terminal_plugin.h
src/controls/: Terminal.qml  qmldir
src/controls.5/: Terminal.qml
src/controls.5/private/: TerminalInputArea.qml  TerminalScrollBar.qml
src/controls.6/: ColorSchemesPage.qml  Terminal.qml
src/controls.6/private/: TerminalInputArea.qml  TerminalScrollBar.qml
src/controls/private/: TerminalScrollBar.qml
src/lib/: CMakeLists.txt  ColorScheme.cpp  ColorScheme.h  Emulation.cpp  Emulation.h  Filter.cpp  Filter.h  HistorySearch.cpp  HistorySearch.h  ProcessInfo.cpp  Pty.cpp  Pty.h  ScreenWindow.cpp  ScreenWindow.h  SearchBar.h  Session.cpp  Session.h  TerminalDisplay.cpp  TerminalDisplay.h  Vt102Emulation.cpp  Vt102Emulation.h  customcolorscheme.cpp  customcolorscheme.h  kptydevice.cpp  kptydevice.h  kptyprocess.h  ksession.cpp  ksession.h  qtermwidget.cpp  qtermwidget.h  tools.cpp  tools.h
src/lib/color-schemes/: Maui-Dark.colorscheme  Maui-Light.colorscheme  Nitrux.colorscheme
